syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "HomeAvatarTalkFinishInfo.proto";

// CmdId: 4700
// EnetChannelId: 0
// EnetIsReliable: true
message HomeAvatarTalkRsp {
	int32 retcode = 2;
	HomeAvatarTalkFinishInfo avatar_talk_info = 9;
}
